--- a/edubase/views/templates/base.html
+++ b/edubase/views/templates/base.html
@@ -35,7 +35,7 @@
   <body>
     <div class="row">
       <div class="seven columns">
-        <h2><a href="index.html"><img src="{{ STATIC_URL }}images/Vinaya_logo_small.png"></a></h2>
+        <h2><a href="/"><img src="{{ STATIC_URL }}images/Vinaya_logo_small.png"></a></h2>
       </div>
       <div class="five columns">
         {% if user.is_authenticated %}
